# server/pb/gorm_db.pb.go
@@ -273,6 +273,7 @@ type Product struct {
 	Description string                 `protobuf:"bytes,5,opt,name=description,proto3" json:"description,omitempty"`
 	CreatedAt   *timestamppb.Timestamp `protobuf:"bytes,101,opt,name=createdAt,proto3" json:"createdAt,omitempty"`
 	UpdatedAt   *timestamppb.Timestamp `protobuf:"bytes,102,opt,name=updatedAt,proto3" json:"updatedAt,omitempty"`
+	DeletedAt   *timestamppb.Timestamp `protobuf:"bytes,103,opt,name=deletedAt,proto3" json:"deletedAt,omitempty"`
 }
 
 func (x *Product) Reset() {
@@ -356,6 +357,13 @@ func (x *Product) GetUpdatedAt() *timestamppb.Timestamp {
 	return nil
 }
 
+func (x *Product) GetDeletedAt() *timestamppb.Timestamp {
+	if x != nil {
+		return x.DeletedAt
+	}
+	return nil
+}
+
 var File_gorm_db_proto protoreflect.FileDescriptor
 
 var file_gorm_db_proto_rawDesc = []byte{
@@ -434,7 +442,7 @@ var file_gorm_db_proto_rawDesc = []byte{
 	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61,
 	0x6d, 0x70, 0x42, 0x09, 0xe0, 0x41, 0x03, 0xba, 0xb9, 0x19, 0x02, 0x0a, 0x00, 0x52, 0x09, 0x64,
 	0x65, 0x6c, 0x65, 0x74, 0x65, 0x64, 0x41, 0x74, 0x3a, 0x0e, 0xba, 0xb9, 0x19, 0x0a, 0x08, 0x01,
-	0x1a, 0x06, 0x73, 0x74, 0x6f, 0x72, 0x65, 0x73, 0x22, 0xee, 0x02, 0x0a, 0x07, 0x50, 0x72, 0x6f,
+	0x1a, 0x06, 0x73, 0x74, 0x6f, 0x72, 0x65, 0x73, 0x22, 0xb3, 0x03, 0x0a, 0x07, 0x50, 0x72, 0x6f,
 	0x64, 0x75, 0x63, 0x74, 0x12, 0x21, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05,
 	0x42, 0x11, 0xe0, 0x41, 0x03, 0xba, 0xb9, 0x19, 0x0a, 0x0a, 0x08, 0x28, 0x01, 0x30, 0x01, 0x40,
 	0x01, 0x48, 0x01, 0x52, 0x02, 0x69, 0x64, 0x12, 0x1c, 0x0a, 0x05, 0x74, 0x69, 0x74, 0x6c, 0x65,
@@ -456,9 +464,13 @@ var file_gorm_db_proto_rawDesc = []byte{
 	0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x42, 0x1c,
 	0xe0, 0x41, 0x03, 0xba, 0xb9, 0x19, 0x15, 0x0a, 0x13, 0x3a, 0x11, 0x43, 0x55, 0x52, 0x52, 0x45,
 	0x4e, 0x54, 0x5f, 0x54, 0x49, 0x4d, 0x45, 0x53, 0x54, 0x41, 0x4d, 0x50, 0x52, 0x09, 0x75, 0x70,
-	0x64, 0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x3a, 0x10, 0xba, 0xb9, 0x19, 0x0c, 0x08, 0x01, 0x1a,
-	0x08, 0x70, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x73, 0x42, 0x06, 0x5a, 0x04, 0x2e, 0x2f, 0x70,
-	0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x64, 0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x43, 0x0a, 0x09, 0x64, 0x65, 0x6c, 0x65, 0x74,
+	0x65, 0x64, 0x41, 0x74, 0x18, 0x67, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f,
+	0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d,
+	0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x42, 0x09, 0xe0, 0x41, 0x03, 0xba, 0xb9, 0x19, 0x02, 0x0a,
+	0x00, 0x52, 0x09, 0x64, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x64, 0x41, 0x74, 0x3a, 0x10, 0xba, 0xb9,
+	0x19, 0x0c, 0x08, 0x01, 0x1a, 0x08, 0x70, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x74, 0x73, 0x42, 0x06,
+	0x5a, 0x04, 0x2e, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -481,20 +493,21 @@ var file_gorm_db_proto_goTypes = []interface{}{
 	(*timestamppb.Timestamp)(nil), // 3: google.protobuf.Timestamp
 }
 var file_gorm_db_proto_depIdxs = []int32{
-	3, // 0: swing.v1.User.createdAt:type_name -> google.protobuf.Timestamp
-	3, // 1: swing.v1.User.updatedAt:type_name -> google.protobuf.Timestamp
-	3, // 2: swing.v1.User.deletedAt:type_name -> google.protobuf.Timestamp
-	2, // 3: swing.v1.Store.products:type_name -> swing.v1.Product
-	3, // 4: swing.v1.Store.createdAt:type_name -> google.protobuf.Timestamp
-	3, // 5: swing.v1.Store.updatedAt:type_name -> google.protobuf.Timestamp
-	3, // 6: swing.v1.Store.deletedAt:type_name -> google.protobuf.Timestamp
-	3, // 7: swing.v1.Product.createdAt:type_name -> google.protobuf.Timestamp
-	3, // 8: swing.v1.Product.updatedAt:type_name -> google.protobuf.Timestamp
-	9, // [9:9] is the sub-list for method output_type
-	9, // [9:9] is the sub-list for method input_type
-	9, // [9:9] is the sub-list for extension type_name
-	9, // [9:9] is the sub-list for extension extendee
-	0, // [0:9] is the sub-list for field type_name
+	3,  // 0: swing.v1.User.createdAt:type_name -> google.protobuf.Timestamp
+	3,  // 1: swing.v1.User.updatedAt:type_name -> google.protobuf.Timestamp
+	3,  // 2: swing.v1.User.deletedAt:type_name -> google.protobuf.Timestamp
+	2,  // 3: swing.v1.Store.products:type_name -> swing.v1.Product
+	3,  // 4: swing.v1.Store.createdAt:type_name -> google.protobuf.Timestamp
+	3,  // 5: swing.v1.Store.updatedAt:type_name -> google.protobuf.Timestamp
+	3,  // 6: swing.v1.Store.deletedAt:type_name -> google.protobuf.Timestamp
+	3,  // 7: swing.v1.Product.createdAt:type_name -> google.protobuf.Timestamp
+	3,  // 8: swing.v1.Product.updatedAt:type_name -> google.protobuf.Timestamp
+	3,  // 9: swing.v1.Product.deletedAt:type_name -> google.protobuf.Timestamp
+	10, // [10:10] is the sub-list for method output_type
+	10, // [10:10] is the sub-list for method input_type
+	10, // [10:10] is the sub-list for extension type_name
+	10, // [10:10] is the sub-list for extension extendee
+	0,  // [0:10] is the sub-list for field type_name
 }
 
 func init() { file_gorm_db_proto_init() }
